tests/fixtures/invalid/bool_div_set.py
# Cannot divide Bool and Set[int]
x: float = True / {1, 2, 3}
